--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "139835de",
+   "cell_type": "markdown",
+   "id": "a42916dc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/SmilodonCub/DATA620/master/starwars.png\" width=\"100%\" style=\"margin-left:auto; margin-right:auto\">"
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/best-star-wars-planets.png?token=GHSAT0AAAAAABRO24QDCBZH5KH5KNWCPRNCYRLQJDQ\" width=\"100%\" style=\"margin-left:auto; margin-right:auto\">"
    ]
   },
   {
