--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -323,24 +323,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65fff289",
+   "metadata": {},
+   "source": [
+    "Here are the number of record and list of keys in the data dictionary:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f8b23fbf",
+   "execution_count": 39,
+   "id": "f6f2e508",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "29858"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total records in dictionary: 29858\n",
+      "Keys: dict_keys(['url', 'title', 'is_character', 'side_bar', 'paragraph', 'crosslinks'])\n"
+     ]
     }
    ],
    "source": [
-    "len( data.keys() )"
+    "print('Total records in dictionary:', len(data.keys()))\n",
+    "print('Keys:', data['Yoda'].keys() )"
    ]
   },
   {
@@ -353,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "dfce02bf",
    "metadata": {},
    "outputs": [
@@ -361,14 +368,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['url', 'title', 'is_character', 'side_bar', 'paragraph', 'crosslinks'])\n",
       "['The_Gathering', 'Behavioral_modification_biochip', 'Akar-Deshu', 'CT-5555', 'Alliance_to_Restore_the_Republic', 'Chewbacca', 'Darth', 'Ezra_Bridger', 'Jedi', 'Army', 'Starlight_Beacon', 'Immortality', 'Jedi_Knight', 'Nightsisters', 'Skywalker_family', 'Lothal', 'Veter', 'Swamp', 'Count', 'Cloning', 'Huyang', 'Battle_of_Endor', 'Separatist_Droid_Army', 'Kamino', 'Kashyyyk', 'Mandalorian', 'Homeworld', 'Mission_to_Raxus', 'Cave_of_Evil', 'CC-4477', 'Yodas_species', 'Medical_droid', 'Jabba_Desilijic_Tiure', 'Zillo_Beast', 'Second_battle_of_Christophsis', 'Millennium', 'Even_Piell', 'Coleman_Trebor', 'Gas_giant', 'Seeing_stone', 'New_Order', 'Silman', 'Rig_Nema', 'Siege_of_Mandalore', 'Tiplar', 'Battle_of_Kashyyyk', 'Galactic_Empire', 'Obi-Wan_Kenobi', 'Kachirho', 'Force-bond', 'Hutt', 'Bombing_of_the_Jedi_Temple_hangar', 'Plo_Koon', 'Jetpack', 'Firefly', 'Light_side_of_the_Force', '4_ABY', 'Battle_of_Crait', 'Telekinesis', 'Canon', 'Lothal_Jedi_Temple', 'Sith_Lord', 'Letta_Turmond', 'Mission_to_Utapau', 'Garro', 'Death', 'Attack_on_Mahranee', 'Tatooine', 'Rugosa', 'Bounty_hunter', 'Jedi_Order', 'Skywalker_lightsaber', '35_ABY', 'Battle_of_Christophsis', 'Seventh_Sister', 'Mission_to_Serenno_(Krayts_Claw)', 'Advanced_Recon_Commando', 'Terentatek', 'Gideons_dark_trooper_platoon', 'Lightsaber', 'Galactic_Emperor', 'King', 'Separatist_Crisis', 'Malevolence', 'Supreme_Chancellor', '9_ABY', 'Chancellery_Secretariat', 'Youngling', 'Yodas_homeworld', 'Exile_(punishment)', 'Mortis', 'Ziro_Desilijic_Tiure', 'Taris', 'Maul', 'Clone_trooper', 'Tree', 'Species', 'Lene_Kostana', 'Padawan', 'Defender_of_the_Home_Tree', 'Third-generation_design_Dark_Trooper', 'Reproduction', 'Tu-Anh', 'Wilhuff_Tarkin', 'Standard_day', 'Eeth_Koth', 'Grand_Army_of_the_Republic', 'Battle_of_Ringo_Vinda', 'Ezra_Bridgers_lightsaber', 'Mahran', 'CC-1004', 'Kanan_Jarrus', 'Force-sensitive', 'Rodia', 'Corvus', 'Malachor', 'Lightsaber_combat', 'Katuunko', 'Zabrak', 'Malevolence_campaign', 'Anakin_Skywalker', 'Jedi_Council', 'Tarfful', 'Chuang', 'Dedication_of_the_Starlight_Beacon', 'Midi-chlorian', 'Grogu', 'Second_rescue_of_Grogu', 'Crucible', 'Avar_Kriss', 'Sacred_Jedi_texts', 'Breath_mask', 'Yodas_Hut', 'Endor', '32_BBY', 'Sexes', 'Finis_Valorum', 'R2-D2', 'Asajj_Ventress', 'First_Battle_of_Geonosis', 'Astromech_droid', 'Saesee_Tiin', 'Cloud_City', 'Jedi_General', 'Moon', 'Force_deflection', 'Stass_Allie', 'Sith_apprentice', 'Cato_Neimoidia', 'Stonepower', 'Sifo-Dyas', 'Agen_Kolar', 'Deprivation_ritual', 'Battle_of_Naboo', 'Star_system', 'Captain', 'Standard_century', 'Oba_Diah_moon', 'Grand_Master', 'infantry', 'Mace_Windu', 'Polis_Massa', 'CT-5385', 'Ki-Adi-Mundi', 'E3-standard_starship_lifeboat', 'Time', 'Jedi_youngling', 'Yodas_old_Master', 'Chosen_One', 'Adi_Gallia', 'Trade_Federation', 'Sith', '501st_Legion', 'Grievous', 'Zombie', 'Planet', 'Utapau', 'The_galaxy', 'Mission_to_Moraband', 'Ahsoka_Tano', 'Quinlan_Vos', 'Pyke_Syndicate', 'DS-2_Death_Star_II_Mobile_Battle_Station', 'Gungan', 'Jango_Fett', 'Darth_Bane', 'Clone_Wars', 'Sith_Master', 'Dathomirian', 'Shaak_Ti', 'Wellspring_of_Life', 'Trial_of_Ahsoka_Tano', 'Barriss_Offee', 'Eta-2_Actis-class_light_interceptor', 'Ambush_on_Rugosa', 'Rescue_of_Quinlan_Vos', 'Tholme', 'Force_spirit', 'Knighting_ceremony', 'Rule_of_Two', 'Kyber_crystal', 'The_Grand_Inquisitor', 'Dooku', 'Savis_Workshop', 'Galactic_Senate', 'Yarael_Poof', 'Wookiee', 'Galactic_calendar', 'Jocasta_Nu', 'Bear_Clan', 'Fifth_Brother', 'Timeline_of_galactic_history', 'Mustafar', 'Aayla_Secura', 'Coleman_Kcaj', 'Rys', 'Dark_side_of_the_Force', 'Yaddle', 'Hermit', 'Marshal', 'Nala_Se', 'Oba_Diah', 'Ben_Solo', 'Cin_Drallig', 'Dark_Lord_of_the_Sith', 'Force_lightning', 'Jedi_Master', 'Battle_of_Malastare', 'Trandoshan', 'General', 'Dagobah', 'Jedi_Code', 'Kilogram', 'Alderaan', 'Giants_of_living_stone', 'Meter', 'The_Force', 'Galactic_Republic', 'Destruction_of_the_Separatist_supply_storage_base', 'Utapau_system', '896_BBY', 'Proclamation_of_the_New_Order', 'T-65B_X-wing_starfighter', 'Luminara_Unduli', 'Republic_Military', 'Naboo', 'Mega-ion_cannon', 'Admiral', 'Inquisitorius', 'AZI-345211896246498721347', 'Great_Jedi_Purge', 'Netherworld_of_the_Force', 'Rey_Skywalker', 'Standard_year', 'Rotta', 'Professor', '19_BBY', 'Imperial_Era', 'Kit_Fisto', '22_BBY', 'Mahranee', 'Duel_in_the_Galactic_Senate', '232_BBY', 'Wullf_Yularen', 'Force_vision', 'Battle_of_Exegol', 'Toydarian', 'Destruction_of_the_Vanqor_listening_post', 'Kungfu', 'Battle_of_unidentified_planet_(Tholme_and_Ventress)', 'Jek', 'Republic_Era', 'Jedi-Sith_War', 'Force_Priestesses', 'Order_66', 'Color', 'Lula_Talisola', 'Jedi_training', 'Subjugator-class_heavy_cruiser', 'Oppo_Rancisis', 'Din_Djarin', 'Jedi_High_Council', 'Rex', '20_BBY', 'Luke_Skywalker', 'Human', 'Shoto_lightsaber', 'Droideka', 'Invasion_of_Naboo', 'Battle_droid', 'Moraband_execution_chamber', 'Katooni', 'Coruscant', 'Depa_Billaba', 'Battle_of_Yavin', 'Valley_of_the_Dark_Lords', 'Tython', 'Ahch-To', 'Tranquility', 'Qui-Gon_Jinn', 'Imperial_Palace', 'Moraband', 'Confederacy_of_Independent_Systems', 'Jedi_Temple_Guard', 'Darth_Sidious', 'Felucia', 'Vote_of_No_Confidence']\n"
      ]
     }
    ],
    "source": [
-    "print( data['Yoda'].keys() )\n",
-    "print( data['Yoda']['crosslinks'] )"
+    "print(data['Yoda']['crosslinks'] )"
    ]
   },
   {
@@ -378,11 +383,11 @@
    "source": [
     "<br>  \n",
     "\n",
-    "This time, we want to find **Planets** in the Crosslinks, so that we can attach characters to planets, in order to create a bipartite graph.\n",
+    "For Project 2, we want to find **planets** in the Crosslinks, so that we can attach Star Wars characters to Star Wars planets, and create a bipartite graph of Characters And Planets.\n",
     "\n",
-    "How do we find planets?\n",
+    "But how do we find planetary data? We must study the Star Wars Canon pickle files again.\n",
     "\n",
-    "To illustrate another approach, the Python code below will import the Star Wars Canon pickle files to MS SQL: "
+    "To illustrate another approach, the Python code below will import the Star Wars Canon pickle files to a Microsoft SQL database: "
    ]
   },
   {
@@ -563,14 +568,24 @@
    "id": "8f2a818d",
    "metadata": {},
    "source": [
-    "And here is a picture of the SQL Database with the new tables added:"
+    "Here is a screen capture of the new SQL Database tables taken from SQL Server Management Studio:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9018eccf",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/SQL-Pickle-Tables.png\" width=\"25%\" style=\"margin-left:auto; margin-right:auto\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dca9c760",
+   "metadata": {},
+   "source": [
+    "We can "
+   ]
   },
   {
    "cell_type": "markdown",
