--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -584,8 +584,32 @@
    "id": "dca9c760",
    "metadata": {},
    "source": [
-    "We can "
+    "Below is a screenshot of a few records from one of the converted pickle tables:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b82d2f23",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/SQL-Pickle-Rows.png\" width=\"100%\" style=\"margin-left:auto; margin-right:auto\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebac2bf8",
+   "metadata": {},
+   "source": [
+    "A SQL statement combines the six tables into one:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be48930",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
