--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -609,7 +609,9 @@
    "cell_type": "markdown",
    "id": "6be48930",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/SQL-Pickle-Combine.png\" width=\"25%\" style=\"margin-left:auto; margin-right:auto\">\n"
+   ]
   },
   {
    "cell_type": "markdown",
