--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -615,6 +615,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97c31070",
+   "metadata": {},
+   "source": [
+    "Since we are looking for planets, we can query on the name of a known planet. Note the \"Sidebar\" column contains \"Astrological information.\"   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0767cd8e",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/Canon-Jakku.png\" width=\"80%\" style=\"margin-left:auto; margin-right:auto\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fbdb6688",
    "metadata": {},
    "source": [
@@ -622,6 +638,18 @@
     "\n",
     "The following code will step through the crosslinks for each key in the data dict. Then, it will evaluate whether the crosslink is a character. If the crosslink is between characters, this will be added to the graph network."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6acaf877",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c0e52a",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
