--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -618,15 +618,23 @@
    "id": "97c31070",
    "metadata": {},
    "source": [
-    "Since we are looking for planets, we can query on the name of a known planet. Note the \"Sidebar\" column contains \"Astrological information.\"   "
+    "Since we are looking for planets, we can query on the name of a known planet. Note the \"Sidebar\" column contains \"Astrological information\" and the Paragraph contains the word \"planet\".  We will use this as a starting point to search for planets. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0767cd8e",
+   "id": "476e866c",
    "metadata": {},
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/Canon-Jakku.png\" width=\"80%\" style=\"margin-left:auto; margin-right:auto\">\n"
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/Canon-Jakku.png\" width=\"60%\" style=\"margin-left:auto; margin-right:auto\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4b65ed4",
+   "metadata": {},
+   "source": [
+    "The Canon data lists objects, but it doesn't strongly type each object. So we add a column \"ObjectType\" so that as we scrub the data and classify objects as planets, we can store that classification in the dataset."
    ]
   },
   {
