--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -639,6 +639,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b63ed382",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/Canon-ObjectType.png\" width=\"70%\" style=\"margin-left:auto; margin-right:auto\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f448b99",
+   "metadata": {},
+   "source": [
+    "This helps avoid misclassification; for example, there are 135 Astrographical objects with the word \"planet\" in their paragraph, that are not planets:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c11bf633",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://raw.githubusercontent.com/LovinSpoonful/DATA620-Project2/main/Astro-NotPlanets.png\" width=\"70%\" style=\"margin-left:auto; margin-right:auto\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "911d03ee",
+   "metadata": {},
+   "source": [
+    "Altogether we found 1,136 planets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9803e11",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "fbdb6688",
    "metadata": {},
    "source": [
@@ -646,6 +686,12 @@
     "\n",
     "The following code will step through the crosslinks for each key in the data dict. Then, it will evaluate whether the crosslink is a character. If the crosslink is between characters, this will be added to the graph network."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76abe133",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
