--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6fff1c92",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "643f8785",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8df1cc51",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "4   Human       None   Male     NaN      None       None       None   None  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "adecbff6",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29860/29860 [00:00<00:00, 61426.46it/s]\n"
+      "100%|██████████| 29860/29860 [00:00<00:00, 61174.79it/s]\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "f6f2e508",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "dfce02bf",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
     "\n",
     "But how do we find planetary data? We must study the Star Wars Canon pickle files again.\n",
     "\n",
-    "To illustrate another approach, the Python code below will import the Star Wars Canon pickle files to a Microsoft SQL database: "
+    "Just in case any students have jobs where they must move data between Python and a MS SQL database a lot, here is a demonstration of how to do just that.  The code block below moves the pickle files into the database: "
    ]
   },
   {
@@ -602,7 +602,7 @@
    "id": "ebac2bf8",
    "metadata": {},
    "source": [
-    "A SQL statement combines the six tables into one:"
+    "We combine the six tables into one:"
    ]
   },
   {
@@ -634,7 +634,7 @@
    "id": "a4b65ed4",
    "metadata": {},
    "source": [
-    "The Canon data lists objects, but it doesn't strongly type each object. So we add a column \"ObjectType\" so that as we scrub the data and classify objects as planets, we can store that classification in the dataset."
+    "We add column \"ObjectType\" to store our classifications. This helps if some must be classified manually due to dirty data."
    ]
   },
   {
@@ -652,7 +652,7 @@
    "id": "8f448b99",
    "metadata": {},
    "source": [
-    "This helps avoid misclassification; for example, there are 135 Astrographical objects with the word \"planet\" in their paragraph, that are not planets:"
+    "The ObjectType column also helps us declassify \"false matches\":"
    ]
   },
   {
@@ -668,14 +668,54 @@
    "id": "911d03ee",
    "metadata": {},
    "source": [
-    "Altogether we found 1,136 planets."
+    "**OK, but how do we get the SQL enhanced data back into Python?**  \n",
+    "\n",
+    "We save it as a parquet!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f9df1fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pyodbc\n",
+    "import fastparquet\n",
+    "\n",
+    "# define the database connection\n",
+    "sServer = 'localhost'\n",
+    "sDB = 'CUNY'\n",
+    "cnxn = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n",
+    "                     \"Server=\" + sServer + \";\"\n",
+    "                     \"Database=\" + sDB + \";\"\n",
+    "                     \"Trusted_Connection=yes;\")  \n",
+    "\n",
+    "\n",
+    "#export list of 826 planets from SQL to parquet\n",
+    "sSQL = \"SELECT ObjectName Name FROM tbl_StarWars_Canon WHERE ObjectType = 'Planet'\" # query\n",
+    "df = pd.read_sql_query(sSQL, cnxn) #read the SQL data into a pandas dataframe\n",
+    "df.to_parquet('StarWars_Canon_All_Planets.parquet', engine='fastparquet') #convert the dataframe to a parquet file\n",
+    "\n",
+    "# We also made a medium-sized list of planets, sourced from https://en.wikipedia.org/wiki/List_of_Star_Wars_planets_and_moons\n",
+    "sSQL = \"SELECT Name FROM tbl_StarWars_Planets\" \n",
+    "df = pd.read_sql_query(sSQL, cnxn)\n",
+    "df.to_parquet('StarWars_Planets.parquet', engine='fastparquet')\n",
+    "\n",
+    "# We also made a small list of planets, sourced from https://screenrant.com/star-wars-rogue-one-planets-ranked-jedha-scarif-tatooine/\n",
+    "sSQL = \"SELECT Name FROM tbl_StarWars_Planets WHERE Description2 IS NOT NULL\" \n",
+    "df = pd.read_sql_query(sSQL, cnxn)\n",
+    "df.to_parquet('StarWars_Planets_Shortlist.parquet', engine='fastparquet')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b9803e11",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
