--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -757,6 +757,30 @@
     "df = pd.read_parquet('StarWars_Planets_Shortlist.parquet') \n",
     "planets_short_list = df['Name'].to_list()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19569d32",
+   "metadata": {},
+   "source": [
+    "loop thru the crosslinks # print(data['Yoda']['crosslinks'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae65ba87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105f8c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
