--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -763,24 +763,57 @@
    "id": "19569d32",
    "metadata": {},
    "source": [
-    "loop thru the crosslinks # print(data['Yoda']['crosslinks'] )"
+    "<br>  \n",
+    "\n",
+    "### Graph Objects: Characters and Planets\n",
+    "\n",
+    "Next we will create several network graph objects, linking Star Wars characters to planets. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ae65ba87",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "105f8c8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5334/5334 [00:01<00:00, 4151.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes: 4224, Links: 7927\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a graph object for all characters, all planets\n",
+    "graph_large = nx.Graph()\n",
+    "#loop thru each character\n",
+    "for key in tqdm(characters_list):  #tqdm = progress bar\n",
+    "    #use this key from characters to get the crosslinks from data\n",
+    "    crosslinks = data[key]['crosslinks']\n",
+    "    for crosslink in crosslinks:\n",
+    "        # if the crosslink is to a planet, \n",
+    "        # then this connection describes a connection between a character and a planet\n",
+    "        if crosslink in planets_large_list:\n",
+    "            # add to the .Graph object\n",
+    "            graph_large.add_edge(key, crosslink)\n",
+    "        \n",
+    "print(f'Nodes: {graph_large.number_of_nodes()}, Links: {graph_large.number_of_edges()}')      "
+   ]
   }
  ],
  "metadata": {
