--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -767,7 +767,7 @@
     "\n",
     "### Graph Objects: Characters and Planets\n",
     "\n",
-    "Next we will create several network graph objects, linking Star Wars characters to planets. "
+    "Next we will create a network graph object, linking all Star Wars characters to all planets: "
    ]
   },
   {
@@ -814,6 +814,67 @@
     "        \n",
     "print(f'Nodes: {graph_large.number_of_nodes()}, Links: {graph_large.number_of_edges()}')      "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed9d80db",
+   "metadata": {},
+   "source": [
+    "Here are the first ten nodes (characters):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "10deb140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1138_(First_Order)', 'Jakku', '1151', 'Kamino', '1174', '224_(Coruscant_Security_Force)', 'Coruscant', '3-9', 'Lothal', '7173']\n",
+      "[('Saw_Gerrera', 'Kashyyyk'), ('Saw_Gerrera', 'Jedha'), ('Saw_Gerrera', 'Jeosyn'), ('Saw_Gerrera', 'Onderon'), ('Saw_Gerrera', 'Yerbana'), ('Saw_Gerrera', 'Alderaan'), ('Saw_Gerrera', 'Agamar'), ('Saw_Gerrera', 'Geonosis'), ('Saw_Gerrera', 'Serenno'), ('Saw_Gerrera', 'Inusagi'), ('Saw_Gerrera', 'Core_Worlds'), ('Saw_Gerrera', 'Wrea'), ('Saw_Gerrera', 'Coruscant')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list a few nodes\n",
+    "print(list(graph_large.nodes)[0:10] )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a7934f9",
+   "metadata": {},
+   "source": [
+    "Here are the planets associated with theh character Saw Gerrera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3dad841d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Saw_Gerrera', 'Kashyyyk'), ('Saw_Gerrera', 'Jedha'), ('Saw_Gerrera', 'Jeosyn'), ('Saw_Gerrera', 'Onderon'), ('Saw_Gerrera', 'Yerbana'), ('Saw_Gerrera', 'Alderaan'), ('Saw_Gerrera', 'Agamar'), ('Saw_Gerrera', 'Geonosis'), ('Saw_Gerrera', 'Serenno'), ('Saw_Gerrera', 'Inusagi'), ('Saw_Gerrera', 'Core_Worlds'), ('Saw_Gerrera', 'Wrea'), ('Saw_Gerrera', 'Coruscant')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list edges for one character - these are the planets associated with that character\n",
+    "print(graph_large.edges('Saw_Gerrera') )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16b9377d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
