George added a period

--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -18,7 +18,7 @@
     "# Project 2\n",
     "\n",
     "DATA 620\n",
-    "Bonnie Cooper, George Cruz Deschamps, Rob Hodde"
+    "Bonnie Cooper, George Cruz Deschamps, Rob Hodde."
    ]
   },
   {
