--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -848,7 +848,7 @@
    "id": "3a7934f9",
    "metadata": {},
    "source": [
-    "Here are the planets associated with theh character Saw Gerrera:"
+    "Here are the planets associated with the character Saw Gerrera:"
    ]
   },
   {
@@ -874,7 +874,25 @@
    "cell_type": "markdown",
    "id": "16b9377d",
    "metadata": {},
-   "source": []
+   "source": [
+    "Next we need to integrate the \"Sith\" and \"Jedi\" (Bad/Good) polarity into the dataset, so that we can create a bipartite graph\n",
+    "\n",
+    "Sith = bipartite=0\n",
+    "Jedi = bipartite=1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "175f34cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from networkx.algorithms import bipartite\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
